<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BikeShare</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="user_name">User Name</string>
	<string name="password">Password</string>
	<string name="register">Register Me</string>
	<string name="login">Login</string>
	<string name="mobile">Mobile Number</string>
	<string name="mybikes">My Bikes</string>
	<string name="myaccount">Account</string>
	<string name="myhistory">History</string>
	<string name="accesscode">Access Code</string>
    <string name="startdate">Start: Date and Time</string>
    <string name="starttime">Start Time</string>
    <string name="enddate">End: Date and Time</string>
    <string name="endtime">End Time</string>
    <string name="bike">Bike Model</string>
    <string name="home">Home</string>
</resources>
