<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="@drawable/bikeshape"
    >

    
    <EditText
        android:id="@+id/user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:textColorHint="#7C7B7C"
        android:hint="@string/user_name"
        android:inputType="text" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_name"
        android:layout_below="@+id/user_name"
        android:ems="10"
        android:textColorHint="#7C7B7C"
        android:hint="@string/password"
        android:inputType="textPassword" />

     <Button
        android:id="@+id/login"
        android:background="@drawable/buttonshape"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="15dp"
        android:text="@string/login" />
     

    <Button
        android:id="@+id/register"
        android:background="@drawable/buttonshape"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
		android:layout_below="@+id/login"
        android:layout_alignLeft="@+id/password"
        android:text="@string/register" />
    
</RelativeLayout>
