<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="text" >

        
    </EditText>

    <EditText
        android:id="@+id/paswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uname"
        android:layout_alignRight="@+id/uname"
        android:layout_below="@+id/uname"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/paswd"
        android:layout_below="@+id/paswd"
        android:ems="10"
    	android:hint="@string/mobile"
        android:inputType="text" />

    
    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uname"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="Email"
        android:inputType="text" >
		<requestFocus />
		</EditText>

    <EditText
        android:id="@+id/SSN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mobile"
        android:layout_below="@+id/mobile"
        android:ems="10"
        android:hint="SSN"
        android:inputType="text"
        android:visibility="visible" />

    <EditText
        android:id="@+id/bikeModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bikeName"
        android:layout_below="@+id/bikeName"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="Bike Model"
        android:inputType="text"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/bikeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/isBike"
        android:layout_below="@+id/isBike"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="Bike Name"
        android:inputType="text"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/isBike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/SSN"
        android:layout_below="@+id/SSN"
        android:layout_marginTop="14dp"
        android:text="Register Bike?" />

    <Button
        android:id="@+id/register1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/bikeModel"
        android:layout_below="@+id/bikeModel"
        android:layout_marginRight="54dp"
        android:layout_marginTop="17dp"
        android:text="@string/register" />

</RelativeLayout>
